# stlink-tool-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
assets/: 98-stlink-rs.rules
src/: main.rs  stlink.rs
