[package]
name = "stlink-tool-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to flash chinese ST-link dongles"
homepage = "https://github.com/MadsAndreasen/rs-com"
readme = "README.md"
authors = ["Mads Andreasen <github@andreasen.cc>"]
keywords = ["serialport", "embedded", "terminal", "serial"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.4", features = ["derive"]}
rusb = "0.9.1"