[package]
name = "stlink-tool-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A tool to flash chinese ST-link dongles"
homepage = "https://github.com/MadsAndreasen/rs-com"
readme = "README.md"
authors = ["Mads Andreasen <github@andreasen.cc>"]
keywords = ["serialport", "embedded", "terminal", "serial"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.1.8", features = ["derive"]}
rusb = "0.9.1"
ecb = { version = "0.1.1", features = ["alloc"]}
aes = "0.8.2"
num_enum = "0.5.11"
env_logger = "0.10.0"
log = "0.4.17"
